// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ShippingPopover/> render() should render with default value 1`] = `
<div>
  <Button
    className="p-0 focusable"
    color="link"
    disabled={false}
    id="shipping-lines"
    innerRef={[Function]}
    onClick={[Function]}
    tabIndex={0}
    tag="button"
    type="button"
  >
    <strong>
      Add shipping
    </strong>
  </Button>
  <Popover
    delay={
      Object {
        "hide": 0,
        "show": 0,
      }
    }
    hideArrow={false}
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="shipping-lines"
    toggle={[Function]}
  >
    <Form
      onKeyDown={[Function]}
      onSubmit={[Function]}
      tag="form"
    >
      <PopoverBody
        className="pt-3"
        tag="div"
      >
        <FormGroup
          check={true}
          className="mb-3"
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={false}
              innerRef={[Function]}
              name="type"
              onChange={[Function]}
              required={true}
              tabIndex={0}
              type="radio"
              value="original"
            />
            <span
              className="d-inline-block ml-1"
            >
              <span
                className="d-block"
              >
                Test
                <br />
                <MoneyAmount
                  amount="12.00"
                  currencyCode="USD"
                  negative={false}
                  renderIfZero={false}
                />
              </span>
            </span>
          </Label>
        </FormGroup>
        <FormGroup
          check={true}
          className="mb-3"
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={false}
              innerRef={[Function]}
              name="type"
              onChange={[Function]}
              required={true}
              tabIndex={0}
              type="radio"
              value="free"
            />
            <span
              className="ml-1"
            >
              Free shipping
            </span>
          </Label>
        </FormGroup>
        <FormGroup
          check={true}
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={false}
              name="type"
              onChange={[Function]}
              required={true}
              tabIndex={0}
              type="radio"
              value="custom"
            />
            <span
              className="ml-1"
            >
              Custom
            </span>
          </Label>
        </FormGroup>
        <div
          className="d-flex mt-1"
        >
          <Input
            autoComplete="off"
            className="titleInput"
            onChange={[Function]}
            placeholder="Custom rate name"
            type="text"
            value=""
          />
          <AmountInput
            className={null}
            currencyCode="USD"
            disabled={false}
            id="amount"
            max={null}
            min={0}
            onChange={[Function]}
            required={false}
            saveInputRef={[Function]}
            symbol={null}
            value=""
          />
        </div>
      </PopoverBody>
      <hr
        className="mb-0"
      />
      <PopoverBody
        className="d-flex"
        tag="div"
      >
        <Button
          className="focusable"
          color="secondary"
          onClick={[Function]}
          tabIndex={0}
          tag="button"
          type="button"
        >
          Close
        </Button>
        <Button
          className="ml-auto focusable"
          color="primary"
          tabIndex={0}
          tag="button"
          type="submit"
        >
          Apply
        </Button>
      </PopoverBody>
    </Form>
  </Popover>
</div>
`;

exports[`<ShippingPopover/> render() should render with value 1`] = `
<div>
  <Button
    className="p-0 focusable"
    color="link"
    disabled={false}
    id="shipping-lines"
    innerRef={[Function]}
    onClick={[Function]}
    tabIndex={0}
    tag="button"
    type="button"
  >
    <strong>
      Add shipping
    </strong>
  </Button>
  <span
    className="title"
  >
    Test
  </span>
  <Popover
    delay={
      Object {
        "hide": 0,
        "show": 0,
      }
    }
    hideArrow={false}
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="shipping-lines"
    toggle={[Function]}
  >
    <Form
      onKeyDown={[Function]}
      onSubmit={[Function]}
      tag="form"
    >
      <PopoverBody
        className="pt-3"
        tag="div"
      >
        <FormGroup
          check={true}
          className="mb-3"
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={false}
              innerRef={[Function]}
              name="type"
              onChange={[Function]}
              required={true}
              tabIndex={0}
              type="radio"
              value="free"
            />
            <span
              className="ml-1"
            >
              Free shipping
            </span>
          </Label>
        </FormGroup>
        <FormGroup
          check={true}
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={true}
              name="type"
              onChange={[Function]}
              required={true}
              tabIndex={0}
              type="radio"
              value="custom"
            />
            <span
              className="ml-1"
            >
              Custom
            </span>
          </Label>
        </FormGroup>
        <div
          className="d-flex mt-1"
        >
          <Input
            autoComplete="off"
            className="titleInput"
            onChange={[Function]}
            placeholder="Custom rate name"
            type="text"
            value="Test"
          />
          <AmountInput
            className={null}
            currencyCode="USD"
            disabled={false}
            id="amount"
            max={null}
            min={0}
            onChange={[Function]}
            required={true}
            saveInputRef={[Function]}
            symbol={null}
            value="12.00"
          />
        </div>
      </PopoverBody>
      <hr
        className="mb-0"
      />
      <PopoverBody
        className="d-flex"
        tag="div"
      >
        <Button
          className="focusable"
          color="danger"
          onClick={[Function]}
          tabIndex={0}
          tag="button"
          type="button"
        >
          Remove
        </Button>
        <Button
          className="ml-auto focusable"
          color="primary"
          tabIndex={0}
          tag="button"
          type="submit"
        >
          Apply
        </Button>
      </PopoverBody>
    </Form>
  </Popover>
</div>
`;

exports[`<ShippingPopover/> render() should render without value 1`] = `
<div>
  <Button
    className="p-0 focusable"
    color="link"
    disabled={false}
    id="shipping-lines"
    innerRef={[Function]}
    onClick={[Function]}
    tabIndex={0}
    tag="button"
    type="button"
  >
    <strong>
      Add shipping
    </strong>
  </Button>
  <Popover
    delay={
      Object {
        "hide": 0,
        "show": 0,
      }
    }
    hideArrow={false}
    isOpen={false}
    placement="bottom"
    placementPrefix="bs-popover"
    target="shipping-lines"
    toggle={[Function]}
  >
    <Form
      onKeyDown={[Function]}
      onSubmit={[Function]}
      tag="form"
    >
      <PopoverBody
        className="pt-3"
        tag="div"
      >
        <FormGroup
          check={true}
          className="mb-3"
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={false}
              innerRef={[Function]}
              name="type"
              onChange={[Function]}
              required={true}
              tabIndex={0}
              type="radio"
              value="free"
            />
            <span
              className="ml-1"
            >
              Free shipping
            </span>
          </Label>
        </FormGroup>
        <FormGroup
          check={true}
          tag="div"
        >
          <Label
            check={true}
            tag="label"
            widths={
              Array [
                "xs",
                "sm",
                "md",
                "lg",
                "xl",
              ]
            }
          >
            <Input
              checked={false}
              name="type"
              onChange={[Function]}
              required={true}
              tabIndex={0}
              type="radio"
              value="custom"
            />
            <span
              className="ml-1"
            >
              Custom
            </span>
          </Label>
        </FormGroup>
        <div
          className="d-flex mt-1"
        >
          <Input
            autoComplete="off"
            className="titleInput"
            onChange={[Function]}
            placeholder="Custom rate name"
            type="text"
            value=""
          />
          <AmountInput
            className={null}
            currencyCode="USD"
            disabled={false}
            id="amount"
            max={null}
            min={0}
            onChange={[Function]}
            required={false}
            saveInputRef={[Function]}
            symbol={null}
            value=""
          />
        </div>
      </PopoverBody>
      <hr
        className="mb-0"
      />
      <PopoverBody
        className="d-flex"
        tag="div"
      >
        <Button
          className="focusable"
          color="secondary"
          onClick={[Function]}
          tabIndex={0}
          tag="button"
          type="button"
        >
          Close
        </Button>
        <Button
          className="ml-auto focusable"
          color="primary"
          tabIndex={0}
          tag="button"
          type="submit"
        >
          Apply
        </Button>
      </PopoverBody>
    </Form>
  </Popover>
</div>
`;
